--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "devDependencies": {
     "lodash": "^4.17.21",
     "parcel": "^2.11.0",
+    "postcss": "^8.4.35",
     "prettier": "3.2.4",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.21.3"
   },
