--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@testing-library/react": "^14.2.1",
+    "babel-jest": "^29.7.0",
+    "buffer": "^6.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-svg-transformer": "^1.0.0",
     "lodash": "^4.17.21",
     "parcel": "^2.11.0",
     "postcss": "^8.4.35",
@@ -8,21 +17,28 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.23.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@types/jest": "^29.5.12",
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3"
   },
   "name": "basic-hello-world",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "test": "jest",
+    "watch-test": "jest --watch"
   },
   "author": "",
   "license": "ISC",
